# mindforge

./: .env.example  .gitignore  DESIGN.md  README.en.md  README.md  README.zh-CN.md  justfile  pyproject.toml
configs/: llm.example.yaml  mindforge.yaml  mindforge_example.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_MAP.md  ARCHITECTURE_PRINCIPLES.md  CHANGELOG.md  CLI_COMPLETION.md  CUBOX_DRY_RUN.md  CUSTOM_STRATEGY.md  DOCS_INDEX.md  EVIDENCE_COMMANDS.md  GETTING_STARTED.md  IMPLEMENTATION.md  LLM_PROVIDER_CONFIG.md  LOCAL_FIRST_PRIVACY_CONTRACT.md  M3_HUMAN_APPROVAL_PROTOCOL.md  M4_RECALL_REVIEW_PROTOCOL.md  M5_1_PDF_DOCX_ADAPTER_PROTOCOL.md  M5_2_WEBCLIP_CHATEXPORT_PROTOCOL.md  M5_3_PROJECT_CONTEXT_PROTOCOL.md  M5_4_LEXICAL_RECALL_PROTOCOL.md  M5_7_TELEMETRY_PROTOCOL.md  M5_BACKLOG.md  MINDFORGE_PROTOCOL.md  OBSIDIAN_BINDING.md  PROPOSAL_REVIEWABLE_ARTIFACT.md  README-en.md  README.md  REAL_DOGFOOD_QUICKSTART.md  RELEASE_NOTES.md  RFC_G1_CUBOX_REAL_INGESTION.md  ROADMAP.md  ROADMAP_COMPLETION_LEDGER.md  ROADMAP_PROGRESS.md  SECURITY.md  SOURCE_ADAPTER_PROTOCOL.md  TESTING.md  USAGE.md  USER_GUIDE.md  V0_12_CAPABILITY_MATRIX.md  V0_13_CLOSURE_LEDGER.md  V0_13_DOGFOODING_READINESS.md  (+60 more)
scripts/: audit_architecture.py  check.sh  dogfood_smoke.sh  expanded_dogfood.sh  fake_dogfood.sh  generate_dogfood_samples.py  real_llm_dogfood.sh  recall_quality_gate.py
templates/: knowledge_card.md.j2
tests/: conftest.py  test_active_vault_resolution.py  test_adapters.py  test_api_topics.py  test_app_context.py  test_approval_decision.py  test_approval_service.py  test_approval_service_boundaries.py  test_approve.py  test_approve_presenter.py  test_architecture_boundaries.py  test_bm25_tuning.py  test_card_payload_envelope_contract.py  test_card_quality.py  test_card_workspace_service.py  test_cards_approval_metadata.py  test_checkpoint.py  test_cli_adapter_boundaries.py  test_cli_cubox_dry_run.py  test_cli_cubox_preview_ai_draft.py  test_cli_extras.py  test_cli_function_size_caps.py  test_cli_runtime.py  test_cli_strategy_opt_in.py  test_collection_store.py  test_common_document_parsing.py  test_community_topic.py  test_config.py  test_cubox_adapter_safety_boundary.py  test_cubox_api_adapter.py  test_demo_tour.py  (+142 more)
(+791 files in other folders)
