# MindForge — 项目元数据与依赖声明
#
# ⚠️ Milestone 0 提示：
#   本文件在 M0 阶段仅做"依赖声明"，不要执行 `pip install` 或 `uv sync`。
#   所有依赖会在 Milestone 1 (Source Ingestion MVP) 启动时再正式落地。

[project]
name = "mindforge"
version = "0.7.22"
description = "个人 AI 学习记忆库：多源接入的 AI 知识加工管线（Source Ingestion → Triage → Distill → Link → Apply → Review → Memory）。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jinkun Wang" }]
keywords = ["pkm", "obsidian", "cubox", "agent", "llm", "knowledge-base", "personal-ai"]

# v0.1 最小运行时依赖（M1+ 启用）
dependencies = [
    "pyyaml>=6.0",            # 配置加载
    "python-frontmatter>=1.1",# Markdown frontmatter 解析（adapter 共享）
    "jinja2>=3.1",            # Knowledge Card 模板渲染（M3 才用）
    "httpx>=0.27",            # LLM HTTP 客户端（OpenAI-compatible，M2 才用）
    "typer>=0.12",            # CLI（M1 才用；如不喜欢可换 argparse）
    "rich>=13.0",             # 终端可读输出（status 命令更友好）
    "fastapi>=0.115",         # Local Console API
    "uvicorn>=0.30",          # localhost-only Web server
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
# M5.1 / v0.2.5：PDF/Docx adapter 的可选依赖。未安装时 adapter 调用 load() 给
# 出友好错误（``OptionalDependencyError``）。
pdf = ["pypdf>=4.0"]
docx = ["python-docx>=1.0"]
docs = ["pypdf>=4.0", "python-docx>=1.0"]

[project.scripts]
# M1 才会实现；M0 阶段仅做名字预定
mindforge = "mindforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mindforge", "src/mindforge_web"]
include = ["src/mindforge/assets/**"]
exclude = ["src/mindforge/assets/.mindforge/**"]

# 安全说明：exclude 规则永久排除 .mindforge/ 目录（包含 secrets.json/key/token
# 等敏感文件），确保 wheel/sdist 构建产物不会打包本地运行时密钥。
# .mindforge/ 已在 .gitignore 中排除，不会进入版本控制。

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src/mindforge", "src/mindforge_web"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
# 不设 fail_under 阈值 — 先建立可观测性，阈值设定是后续 policy decision
